# track-binocle

./: .env.example  .gitignore  .gitmodules  Makefile  README.md  claude.patch  claude_changes.patch  docker-bake.hcl  docker-compose.yml  extract.js  index.html  mascot.js  package-lock.json  package.json  renovate.json  sonar-project.properties  styles.css  wcag.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  PERFORMANCE_ANALYSIS.md  README.md  bench_parallel.sh  realtime.toml  strategy.md  update_readmes.py
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/.github/workflows/: ci.yml  release.yml
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-auth/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-auth/src/: lib.rs  noauth.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-auth/src/jwt/: README.md  auth.rs  config.rs  mod.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-bus-inprocess/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-bus-inprocess/src/: bus.rs  lib.rs  publisher.rs  subscriber.rs  tests.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-client/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-client/src/: lib.rs  subscription.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-client/src/client/: README.md  builder.rs  event_loop.rs  mod.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-core/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-core/src/: error.rs  lib.rs  protocol.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-core/src/filter/: README.md  expr.rs  getter.rs  mod.rs  tests.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-core/src/traits/: README.md  auth.rs  bus.rs  mod.rs  producer.rs  transport.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-core/src/types/: README.md  auth_claims.rs  dispatch.rs  envelope.rs  event_id.rs  identifiers.rs  mod.rs  payload.rs  subscription.rs  tests.rs  topic_path.rs  topic_pattern.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-db-mongodb/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-db-mongodb/src/: config.rs  lib.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-db-mongodb/src/producer/: lifecycle.rs  mod.rs  parser.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-db-postgres/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-db-postgres/src/: config.rs  lib.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-db-postgres/src/producer/: README.md  lifecycle.rs  mod.rs  parser.rs  trigger.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-engine/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-engine/benches/: bench_filter.rs  bench_micro.rs  bench_registry.rs  engine_bench.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-engine/src/: lib.rs  producer_registry.rs  router.rs  sequence.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-engine/src/filter_index/: README.md  evaluate.rs  limits.rs  mod.rs  mutate.rs  stats.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-engine/src/registry/: README.md  counters.rs  guards.rs  lookup.rs  mod.rs  unsubscribe.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/: Cargo.toml  README.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/src/: fanout.rs  lib.rs  rest_api.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/src/connection/: README.md  mod.rs  query.rs  send.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-gateway/src/ws_handler/: README.md  connection.rs  handlers.rs  mod.rs  reader.rs  util.rs  writer.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-server/: Cargo.toml
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-server/src/: lib.rs  main.rs  server.rs  signal.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/crates/realtime-server/src/config/: README.md  auth.rs  bus.rs  database.rs  mod.rs  (+2 more)
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/docs/: architecture.md  changelog.md  design_patterns.md  operations.md  tricks.md
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/sandbox/: Dockerfile  docker-compose.yml  test_ws_cdc.py
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/sandbox/db/: mongo-seed.js  postgres-init.sql  postgres-seed.sql
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/sandbox/static/: index.html
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/scripts/: audit.sh
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/tests/integration/: Cargo.toml
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/tests/integration/src/: lib.rs
apps/baas/mini-baas-infra/docker/services/realtime/realtime-agnostic/tests/integration/tests/: e2e.rs
(+753 files in other folders)
