[package]
name = "realtime-bus-inprocess"
version.workspace = true
edition.workspace = true

[dependencies]
realtime-core = { path = "../realtime-core" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }

[lints]
workspace = true
